# aptos-smartcontracts-boilerplate

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Move.toml  README.md  compile_with_docker.bat  compile_with_docker.sh  compile_with_docker_on_windows.bat  config.ts  package-lock.json  package.json
aptos_local_validator/: readme.md  start_local_node.sh  start_local_node_without_docker.sh
deploy/: publish_hello_world.ts  publish_module.ts
docker/: aptos-cli.Dockerfile  build_push.sh
libs/: account.ts  compile.ts  deploy.ts  exec.ts  faucet.ts  font.ts
libs/models/: compile_result.ts
manual-scripts/: compile_with_docker_on_windows.bat  compile_with_docker_on_windows.sh
sources/: Cargo.toml  hello_world.move  staking_contract.move
sources/message/: Move.toml
sources/message/sources/: message.move  message_test.move
sources/src/message/: Move.toml
sources/src/message/sources/: message.move  message_test.move
sources/src/staking_contract/: Move.toml
sources/staking_contract/: Move.toml
sources/staking_contract/sources/: staking_contract.move  staking_contract_test.move
sources/tests/: move_unit_tests.rs
tests/: faucet.ts  first_transaction.ts  hello_blockchain.move  hello_blockchain_orig.ts
utils/: compile.ts  deploy.ts  exec.ts  faucet.ts
